[gd_scene load_steps=8 format=3 uid="uid://h3a62i17wjqk"]

[ext_resource type="Texture2D" uid="uid://catcrc5em4klg" path="res://icon.svg" id="1_5anpg"]
[ext_resource type="Script" path="res://Entities/Enemies/Enemy.gd" id="1_sw6q6"]
[ext_resource type="PackedScene" uid="uid://cb41npl5akjpq" path="res://Obj/Ammo_pack.tscn" id="2_swihu"]
[ext_resource type="Script" path="res://HealthComponent.gd" id="4_27y3n"]
[ext_resource type="Script" path="res://HealthBar.gd" id="5_6sogk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k2ltx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bsq5v"]
size = Vector2(123, 126)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_sw6q6")
AmmoPack = ExtResource("2_swihu")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.25098, 1, 1)
texture = ExtResource("1_5anpg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(5.8182, 5.8182)
shape = SubResource("RectangleShape2D_k2ltx")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_bsq5v")

[node name="HealthComponent" type="Node2D" parent="."]
position = Vector2(-29.5028, -67.2449)
script = ExtResource("4_27y3n")
health = 40

[node name="HealthBarComponent" type="Node2D" parent="."]
position = Vector2(-29.5028, -67.2449)
script = ExtResource("5_6sogk")

[node name="HealthBar" type="ProgressBar" parent="HealthBarComponent"]
offset_top = -155.0
offset_right = 4.0
offset_bottom = -128.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
